fix: fixing the overflow bug on mobile

--- a/style/style.css
+++ b/style/style.css
@@ -6,10 +6,8 @@
 }
 /* ICONS */
 #nav--user-options-icons {
-  width: 25px;
   height: 18px;
   align-items: center;
-  padding: auto;
   margin: 5px;
   color: #000;
   margin-right: 35px;
@@ -20,7 +18,6 @@
 .header {
   margin-top: 20px;
   margin-bottom: -7px;
-  width: 100%;
   height: 70px;
   background-color: #ffff;
   display: flex;
@@ -70,7 +67,6 @@
 .nav--user-options {
   display: inline;
   margin-left: 10px;
-  min-width: 300px;
   margin-bottom: -5px;
 }
 
@@ -95,7 +91,7 @@
 .shop-cover--text {
   font-family: "Poppins", sans-serif;
   text-align: center;
-  padding: 127px;
+  padding-top: 126px;
 }
 /* Vector */
 .path-icon {
@@ -184,7 +180,7 @@
 }
 
 .footer--title-address {
-  width: 250px;
+  max-width: 250px;
   text-align: justify;
 }
 .footer--title-address,
@@ -218,12 +214,25 @@
   background-color: #ffff;
   border: none;
   border-bottom: #000 solid 1px;
+  cursor: pointer;
+}
+
+.button-subbmit:hover {
+  border: #000 solid 1px;
+  border-radius: 10px;
+  padding: 1px;
+  transition-duration: 0.5s;
 }
 
 @media (max-width: 460px) {
+  * {
+    scrollbar-width: initial;
+    padding: 0;
+    margin: 0;
+  }
   .header {
     flex-direction: column;
-    height: 100px;
+    height: 110px;
   }
 
   .sidebar-button {
@@ -231,7 +240,7 @@
     font-size: 30px;
     font-weight: 700;
     position: absolute;
-    margin-left: 4px;
+    padding-left: 4px;
     margin-top: 10px;
     cursor: pointer;
   }
@@ -246,11 +255,15 @@
   }
 
   .nav--user-options {
-    margin-right: -100px;
-    margin-left: -10px;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: space-between;
   }
   #nav--user-options-icons {
-    margin-right: 80px;
+    margin: 0;
+    padding-left: clamp(20px, 8vw, 50px);
+    padding-right: clamp(20px, 8vw, 50px);
   }
   .shop-cover {
     height: 250px;
@@ -276,6 +289,11 @@
   }
   .footer {
     flex-direction: column;
+  }
+  .footer--title-address {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 50px;
   }
   .footer--title-links {
     padding-top: 10px;
